Fixed first person use in bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,7 +76,6 @@
   keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping},
   annote    = {This article describes the development of the PlateUNLP application which lowers the cost and time to digitize astronomical data in plate collections. This system improves upon the collection of this data by individuals, which is an error prone and time-consuming process. The application’s frontend was developed with HTML and JavaScript for a web app. A Node.js and JavaScript backend manages the storage digitized plate data storage. A deep-learning module for the detection of the object within each plate was developed with Flask and Python. PlateUNLP works by first receiving a scanned plate, then segmenting its observations, segmenting the three parts of each observation, converting the spectra from 2D to 1D, and finally the user assists in analyzing the data. The part of this process most relevant to the project is the segmentation of images. This projection created a YOLO (You Only Look Once) detection model which rather than running a classifier on regions of interests approaches segmentation as a regression problem. YOLO could be helpful for separating letters or lines of text. Additionally, the system allowed for changes in brightness, noise, vertical image flipping, rotation, and scaling to help interpret the image which could be important when using computer vision to identify letters and transcribe text if the letters are at odd angles or on problematic surfaces. The authors of this article were primarily students or researchers in Computer Science and Astronomy at The Universidad Nacional de La Plata in Buenos Aires, a university officially recognized by the Argentine Ministry of Education. It is difficult for me to thoroughly investigate each author, but all seemed to be very experienced within their fields.}
 }
-
 @inproceedings{10.1145/3745238.3745531,
   author    = {Zhang, Xueqiang and Dong, Xiaofei and Wang, Yiru and Zhang, Dan and Cao, Feng},
   title     = {A Survey of Multi-AI Agent Collaboration: Theories, Technologies and Applications},
@@ -94,7 +93,7 @@
   location  = {
                },
   series    = {DEAI '25},
-  annote    = {All authors for this journal article were researchers at the Nanjing Research Institute of Next-generation Artificial Intelligence or the China Academy of Information and Communications Technology. According to this article, AI agents convert LLMs to valuable tools with real application and problem-solving abilities. The memory of an AI agent allows it to plan how to best interact with the external environment by using function call techniques. With the multi-AI Agent collaboration system, different AI Agents can interact with each other. In the system, each AI Agent focuses on a specific domain or task and has specialized knowledge, skills, and experience in that area. Architecture can be vertical meaning that there is a lead agent or horizontal meaning all agents are equal. Agent network protocol and model context protocol are two protocols to help connect multiple agents. ANP has equal interaction between AI agents. MCP uses the model as its core and provides a common interface between all agents. AI agents may learn with technologies such as Multi agent reinforcement learning. This aims to teach optimal decision strategies through interactions with agents and their environment. Generally, multiple agent systems surpass the limitations of single agent systems, but may lack personalization, adaptability, and potentially coordination. Privacy issues are also present. This provides me with a fundamental understanding of the multiple agent interactions I wish to have controlling different computer vision systems. I may need to implement many computer vision systems to properly utilize the AI agents. This also provides very brief background on MCP.}
+  annote    = {All authors for this journal article were researchers at the Nanjing Research Institute of Next-generation Artificial Intelligence or the China Academy of Information and Communications Technology. According to this article, AI agents convert LLMs to valuable tools with real application and problem-solving abilities. The memory of an AI agent allows it to plan how to best interact with the external environment by using function call techniques. With the multi-AI Agent collaboration system, different AI Agents can interact with each other. In the system, each AI Agent focuses on a specific domain or task and has specialized knowledge, skills, and experience in that area. Architecture can be vertical meaning that there is a lead agent or horizontal meaning all agents are equal. Agent network protocol and model context protocol are two protocols to help connect multiple agents. ANP has equal interaction between AI agents. MCP uses the model as its core and provides a common interface between all agents. AI agents may learn with technologies such as Multi agent reinforcement learning. This aims to teach optimal decision strategies through interactions with agents and their environment. Generally, multiple agent systems surpass the limitations of single agent systems, but may lack personalization, adaptability, and potentially coordination. Privacy issues are also present. This provides a fundamental understanding of the multiple agent interactions that will be controlling different computer vision systems. Many computer vision systems may need to be implemented to properly utilize the AI agents. This also provides very brief background on MCP.}
 }
 
 @article{10.1145/3519306,
@@ -115,7 +114,7 @@
   articleno  = {72},
   numpages   = {18},
   keywords   = {codex runicus, human evaluation, handwritten text recognition tools, Historical manuscripts},
-  annote     = {The authors of this article include Mohamed Ali Souibgui, Asma Bensalah, Jialuo Chen, and Alicia Fornes, all of whom are researchers and engineers at the Computer Vision Center at the Autonomous University of Barcelona. They are all specialists in the field of computer vision. The journal article asserts that current Handwritten Text Recognition (HTR) methods often lack tools for end users and may struggle with rare scripts that lack labeled data for training and fine tuning. To solve these problems, they developed and compared 4 different computer vision systems, including two cluster methods and two few shot methods. The few shot methods required slightly more user effort but resulted in higher performance, scalability, and hardware needs. Clustering involves assuming all elements are in one cluster then dividing that cluster into sub clusters until the minimum number of symbols in each cluster is reached. The best clusters are used to identify which symbol matches each cluster best. In the few shot method, each symbol is seen as a node in a graph and the similarity between each pair of symbols is measured. Comparing similarities between symbols can be scaled to compare whole lines Several parts of this paper are applicable to my wider research goals. First, the images used were preprocessed, something I will likely need to do, using binarization, which separates the foreground and background, and segmentation, which removes margins. Furthermore, segmentation is implemented to identify connected components to isolate symbols. I may need to implement these steps to transcribe lines of text. Second, the clustering and few shot methods of computer vision could provide an alternative if the standard approaches fail to work for a specific script. These could also be easier methods to use if I ever create my own data sets because they require little learning. Finally, few shot detection is good for cursive because it avoids segmentation issues.}
+  annote     = {The authors of this article include Mohamed Ali Souibgui, Asma Bensalah, Jialuo Chen, and Alicia Fornes, all of whom are researchers and engineers at the Computer Vision Center at the Autonomous University of Barcelona. They are all specialists in the field of computer vision. The journal article asserts that current Handwritten Text Recognition (HTR) methods often lack tools for end users and may struggle with rare scripts that lack labeled data for training and fine tuning. To solve these problems, they developed and compared 4 different computer vision systems, including two cluster methods and two few shot methods. The few shot methods required slightly more user effort but resulted in higher performance, scalability, and hardware needs. Clustering involves assuming all elements are in one cluster then dividing that cluster into sub clusters until the minimum number of symbols in each cluster is reached. The best clusters are used to identify which symbol matches each cluster best. In the few shot method, each symbol is seen as a node in a graph and the similarity between each pair of symbols is measured. Comparing similarities between symbols can be scaled to compare whole lines Several parts of this paper are applicable to my wider research goals. First, the images used were preprocessed, something likely necessary for the project, using binarization, which separates the foreground and background, and segmentation, which removes margins. Furthermore, segmentation is implemented to identify connected components to isolate symbols. These steps need to be implemented to transcribe lines of text. Second, the clustering and few shot methods of computer vision could provide an alternative if the standard approaches fail to work for a specific script. These could also be easier methods to use if data sets are ever created for this project. Finally, few shot detection is good for cursive because it avoids segmentation issues.}
 }
 
 @misc{modelContextProtocol/getting-started/intro,
@@ -132,7 +131,7 @@
   author  = {Cohen, Gregory and Afshar, Saeed and Tapson, Jonathan and Schaik, Andre Van},
   year    = {2017},
   url     = {https://arxiv.org/abs/1702.05373},
-  annote  = {Notably this article is peer reviewed as were all articles for the IJCNN which were later posted to the IEEE Xplore, but it is only freely accessible through Arxiv. This article for the 2017 International Joint Conference on Neural Networks was written primarily by faculty and lecturers at Western Sydney University. Professor Andre van Schaik has a Ph.D. degree in Electrical Engineering, Dr Saeed Afshar is a senior lecturer with degrees in engineering, Dr. has degrees in electrical and computer engineering and Ph.D.’s in Bioelectronics and Neuroscience and Neuromorphic engineering all with the International Centre for Neuromorphic Systems. Additionally, Professor Jonathan Tapson with a Ph.D. in Electrical Engineering, worked at the MARCS Institute for Brain, Behavior, and Development.  These researchers focused on neuromorphic computing or an approach to computing inspired by the human brain, closely tied to AI. They created a dataset from the NIST dataset which used the same image structures as the MNIST dataset. This dataset is called the Extended Modified NIST or EMNIST. For context, the MNIST dataset is a set of handwritten numbers used by Ying Yu and Yuhe Tian in their article “Research Application of Computer Vision-Based Convolution Neural Network in Handwriting Recognition Technology” to develop a computer vision system. This dataset took other elements from the NIST dataset to also include alphabetical characters. Notably, this dataset contains many different writers’ handwriting. This was done to provide an accessible basic dataset for testing purposes. Because of this, it was programmed with splits for testing and has data for validation. Although this dataset was meant for research, I believe that through the division of elements within lines of text it could be used as a basis for a modern handwriting computer vision system. By using this system, I would be able to interact with the datasets using any code that can interact with the very popular MNIST datasets.}
+  annote  = {Notably this article is peer reviewed as were all articles for the IJCNN which were later posted to the IEEE Xplore, but it is only freely accessible through Arxiv. This article for the 2017 International Joint Conference on Neural Networks was written primarily by faculty and lecturers at Western Sydney University. Professor Andre van Schaik has a Ph.D. degree in Electrical Engineering, Dr Saeed Afshar is a senior lecturer with degrees in engineering, Dr. has degrees in electrical and computer engineering and Ph.D.’s in Bioelectronics and Neuroscience and Neuromorphic engineering all with the International Centre for Neuromorphic Systems. Additionally, Professor Jonathan Tapson with a Ph.D. in Electrical Engineering, worked at the MARCS Institute for Brain, Behavior, and Development.  These researchers focused on neuromorphic computing or an approach to computing inspired by the human brain, closely tied to AI. They created a dataset from the NIST dataset which used the same image structures as the MNIST dataset. This dataset is called the Extended Modified NIST or EMNIST. For context, the MNIST dataset is a set of handwritten numbers used by Ying Yu and Yuhe Tian in their article “Research Application of Computer Vision-Based Convolution Neural Network in Handwriting Recognition Technology” to develop a computer vision system. This dataset took other elements from the NIST dataset to also include alphabetical characters. Notably, this dataset contains many different writers’ handwriting. This was done to provide an accessible basic dataset for testing purposes. Because of this, it was programmed with splits for testing and has data for validation. Although this dataset was meant for research, through the division of elements within lines of text it could be used as a basis for a modern handwriting computer vision system. By using this system, the project would be able to interact with the datasets using any code that can interact with the very popular MNIST datasets.}
 }
 
 @inbook{10.1145/3727648.3727740,
@@ -147,5 +146,5 @@
   booktitle = {Proceedings of the 4th International Conference on Computer, Artificial Intelligence and Control Engineering},
   pages     = {564–568},
   numpages  = {5},
-  annote    = {This paper was written by three researchers with the National Key Laboratory of Strength and Structural Integrity Xi’an, Shaanxi, China Aircraft Strength Research Institute of China. Notably, this is not exclusively or primarily a computer science research institute, but one author Xiao He has at least a master’s degree from a Computer Science and Technology program from Northwestern Polytechnical University. It is difficult to determine the background of the other researchers due to language barriers. Because of Xiao He’s background, I believe the research is credible, but perhaps less than research done by a computer science focused institution would be. The paper explores the implementation of image processing using Python’s Tkinter and PIL libraries including a user interface. The program performed this image processing by implementing the Python Imaging Library or (PIL) and NumPy. Through these libraries they were able to use PIL’s convert function to perform gray-scale conversion, and the Gaussian blur is implemented using the convolve function of NumPy. Other processes implemented include image sharpening, binarization, edge extraction, and median filtering. Furthermore, the project performed an image measurement function for regions of interest from C-scan images. This article contributes to my project by offering guidance on how to perform the image processing methods that I will need to have completed before comparing images within certain methods including few shot and cluster computer vision. It also introduces a type of Python user interface which may help me avoid web development.}
+  annote    = {This paper was written by three researchers with the National Key Laboratory of Strength and Structural Integrity Xi’an, Shaanxi, China Aircraft Strength Research Institute of China. Notably, this is not exclusively or primarily a computer science research institute, but one author Xiao He has at least a master’s degree from a Computer Science and Technology program from Northwestern Polytechnical University. It is difficult to determine the background of the other researchers due to language barriers. Because of Xiao He’s background, I believe the research is credible, but perhaps less than research done by a computer science focused institution would be. The paper explores the implementation of image processing using Python’s Tkinter and PIL libraries including a user interface. The program performed this image processing by implementing the Python Imaging Library or (PIL) and NumPy. Through these libraries they were able to use PIL’s convert function to perform gray-scale conversion, and the Gaussian blur is implemented using the convolve function of NumPy. Other processes implemented include image sharpening, binarization, edge extraction, and median filtering. Furthermore, the project performed an image measurement function for regions of interest from C-scan images. This article contributes to the project by offering guidance on how to perform the image processing methods that will need to have completed before comparing images within certain methods including few shot and cluster computer vision. It also introduces a type of Python user interface which may help me avoid web development.}
 }
