--- a/bibliography.bib
+++ b/bibliography.bib
@@ -134,6 +134,7 @@
   pages     = {2921-2926},
   keywords  = {NIST;Databases;Training;Benchmark testing},
   doi       = {10.1109/IJCNN.2017.7966217},
+  url       = {https://ieeexplore.ieee.org/document/7966217},
   annote    = {Notably this article is peer reviewed as were all articles for the IJCNN which were later posted to the IEEE Xplore, but it is only freely accessible through Arxiv. This article for the 2017 International Joint Conference on Neural Networks was written primarily by faculty and lecturers at Western Sydney University. Professor Andre van Schaik has a Ph.D. degree in Electrical Engineering, Dr Saeed Afshar is a senior lecturer with degrees in engineering, Dr. has degrees in electrical and computer engineering and Ph.D.'s in Bioelectronics and Neuroscience and Neuromorphic engineering all with the International Centre for Neuromorphic Systems. Additionally, Professor Jonathan Tapson with a Ph.D. in Electrical Engineering, worked at the MARCS Institute for Brain, Behavior, and Development.  These researchers focused on neuromorphic computing or an approach to computing inspired by the human brain, closely tied to AI. They created a dataset from the NIST dataset which used the same image structures as the MNIST dataset. This dataset is called the Extended Modified NIST or EMNIST. For context, the MNIST dataset is a set of handwritten numbers used by Ying Yu and Yuhe Tian in their article “Research Application of Computer Vision-Based Convolution Neural Network in Handwriting Recognition Technology” to develop a computer vision system. This dataset took other elements from the NIST dataset to also include alphabetical characters. Notably, this dataset contains many different writers’ handwriting. This was done to provide an accessible basic dataset for testing purposes. Because of this, it was programmed with splits for testing and has data for validation. Although this dataset was meant for research, through the division of elements within lines of text it could be used as a basis for a modern handwriting computer vision system. By using this system, the project would be able to interact with the datasets using any code that can interact with the very popular MNIST datasets.}
 }
 
