Create outline for background based on general knowledge and terms and add pdf of literature review

--- a/literatureReview.tex
+++ b/literatureReview.tex
@@ -2,8 +2,7 @@
 \usepackage[letterpaper]{geometry} 
 \usepackage{times} 
 \usepackage{setspace} 
-\usepackage[style=mla]{biblatex} 
-
+\usepackage{amstext}
 
 \geometry{top=1in, bottom=1in, left=1in, right=1in} 
 \doublespacing 
@@ -11,9 +10,23 @@
 \begin{document} 
 
 \begin{flushleft} 
-    \text{Miles Fike} \\ 
-    \text{CSCI 23000} \\ 
-    \text{Dr. Musgrave} \\ 
-    \text{21 April 2025}
+\text{Miles Fike} \\ 
+\text{CSCI 40100} \\ 
+\text{Dr. Guarnera} \\ 
+\text{2 October 2025}
 \end{flushleft} 
+\section{Background}
+\begin{enumerate}
+\item MCP or Model Context Protocol is a protocol used to allow LLMs such as ChatGPT to interact with external tools. This is a 
+relatively new protocol, and therefore, very little peer-reviewed research has been done on its use, risks, and capabilities. 
+\item Computer vision refers to the AI systems that allow computers to interpret visual information.
+\end{enumerate} 
+
+\section{Convolutional Neural Networks For Computer Vision}
+\begin{enumerate}
+\item 
+\item 
+\end{enumerate} 
+
+
 \end{document}
