added draft for results: Very rough because I have none in a presentable state

--- a/main.tex
+++ b/main.tex
@@ -44,8 +44,17 @@ I also created code to convert an image into black and white using PIL and CV2 p
 For each computer vision system within the database, I will describe how the required system was developed.
 \section{Results}
 
-\section{Conclusion}
+For the results section, I will show a graph of the loss of each computer vision system as I progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. 
 
+I will also show examples of lines of text and the output on the user interface.
+
+Charts show how many incorrectly identified characters were given in example texts by each of the systems
+
+The next section of the results will show how different text styles were successfully identified by the Model Context Protocol.
+
+\section{Conclusion}
+In conclusion, this project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system effectively overcomes the limitations of single computer vision system strategies. This design not only enhances accuracy across diverse handwriting styles but also provides a foundation for expansion as new models are developed. The result is a flexible, scalable, and intelligent handwriting recognition system capable of evolving with future as more computer vision systems are added to it.
+I will also include how each individual system compares to other computer vision systems that have already been released, and I will show how well different styles fare input into unprepared systems versus a system built to handle diverse styles.
 \bibliographystyle{acm}
 \bibliography{bibliography.bib}
 
