Sections describing image processing added

--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,10 @@ While seeking to implement the necessary computer vision systems to complete thi
 
 I broke the full EMNIST into training and testing sets using its own built in attributes. This will be explained further in future drafts.
 
+For the preparation of image processing first each individual image that needs to be read by the system needed to be identified and separated from the larger image of text input. To do this, the first attempt sought to isolate each individual image of a letter by identifying isolated blobs of white pixels within the image of text. The program would identify a pixel and try to iterate through the surrounding pixels to identify if they were also part of the letter. This, however, proved ineffective for a few reasons. First of all, the system picked up noise in the background, such as smudges on paper, and tried to label it as letters. However, that could be prevented by applying a Gaussian blur that smoothed the image before black and white thresholding converted the image to two colors. The real issue appeared with the letters “i” and “j.” The dots on these letters were identified as separate letters by this method making it impossible to properly isolate the full “i” and it created an extra letter in the output. I could not just look for nearby images because often the dots of “i’s” were significantly separated from the body of the letter. Because of the flaws with this method, a separate program was prepared to read the complex. The program starts by converting the initial image into gray scale then using Opencv’s threshold function to convert the image to black and white. From here a black background was created for the image and any pixel that is not absolutely black was made white by iterating through the image. Next, I iterate through each column. If there is a pixel in that column it is marked and when there are no longer any pixels that is marked as well. These sets of two columns are used to crop each separate each image from the original picture, not the grayed version. The resulting images tend to have unusual proportions and a tall height.
 
-I also created code to convert an image into black and white using PIL and CV2 packages within Python. Using the same packages, I identified each connected set of lines to gather characters. From here, I took the characters and blurred the images using a Gaussian blur. Next, the images are centered and reduced in size to 28 by 28 pixels and the colors were reversed. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output. 
+A separate Python module was made to process individual images of letters and to prepare them to be read by the computer vision system. This was applied iteratively to the results of the line reading function. From here, I took the characters and blurred the images using a Gaussian blur which smoothed the colors into transitions between black and white rather than just the two colors while also blurring out some background noise to produce a smoother overall picture. From here, a threshold was set that converted all pixels with a color greater than 100 on a 100 to 255 scale to black. Next, black pixels are converted to white and white pixels are converted to black to make the image white text on a black background. The images were converted into perfects squares by adding extra rows and columns to each side until the width and length were equal. This ensured that when the size of the images was decreased, the images would not be heavily compressed or altered. The images were then converted to 128 by 128 resulting in no apparent warping in any of my tests. Next, the images were iterated over to identify the highest, lowest, furthest left, and furthest right pixels. The image was reduced to just these pixels with two pixel padding before being padded back into a square before being further reduced once more into a 28 by 28-pixel square. To finish the image processing, I mirrored each individual image and rotated it 90 degrees to match the image orientation provided by the EMNIST in their data set. The motivations behind the orientation of these images remains unclear. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output. 
+
 
 For each computer vision system within the database, I will describe how the required system was developed.
 \section{Results}
